methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: ')' expected but ';' found.
def move(nbPas: Int; versLAvant: boolean){
                   ^MethodsArgs:2: error: ';' expected but ')' found.
def move(nbPas: Int; versLAvant: boolean){
                                        ^