methods.args.MethodsArgs.scala.code
def move(nbPas: Int; versLAvant: boolean){
  if (versLAvant){
    for (i<- 1 to nbPas){
      avance()
    }
  } else{
    for (i<-1 to nbPas){
      recule()
    }
  }
}